// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тестирвание компонента Circle Рендер компонента без текста 1`] = `
<div
  class="content "
  data-testid="circle-wrapper"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Тестирвание компонента Circle Рендер компонента в состоянии changing 1`] = `
<div
  class="circle   changing"
  data-testid="circle"
>
  <p
    class="text text_type_circle text_color_input letter"
  >
    changingState
  </p>
</div>
`;

exports[`Тестирвание компонента Circle Рендер компонента в состоянии default 1`] = `
<div
  class="circle   default"
  data-testid="circle"
>
  <p
    class="text text_type_circle text_color_input letter"
  >
    defaultState
  </p>
</div>
`;

exports[`Тестирвание компонента Circle Рендер компонента в состоянии modified 1`] = `
<div
  class="circle   modified"
  data-testid="circle"
>
  <p
    class="text text_type_circle text_color_input letter"
  >
    modifiedState
  </p>
</div>
`;

exports[`Тестирвание компонента Circle Рендер компонента с index 1`] = `
<div
  class="content "
  data-testid="circle-wrapper"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  >
    3
  </p>
  <div
    class="text text_type_input text_color_input mt-4 absolute tail60 element"
  />
</div>
`;

exports[`Тестирвание компонента Circle Рендер компонента с другим реакт-компонентом в head 1`] = `
<div
  class="content "
  data-testid="circle-wrapper"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
  >
    <p>
      Text
    </p>
  </div>
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Тестирвание компонента Circle Рендер компонента с другим реакт-компонентом в tail 1`] = `
<div
  class="content "
  data-testid="circle-wrapper"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  >
    <p>
      Text
    </p>
  </div>
</div>
`;

exports[`Тестирвание компонента Circle Рендер компонента с пропсом isSmall 1`] = `
<div
  class="circle  small default"
  data-testid="circle"
>
  <p
    class="text text_type_circle text_color_input letter"
  />
</div>
`;

exports[`Тестирвание компонента Circle Рендер компонента с текстом 1`] = `
<div
  class="content "
  data-testid="circle-wrapper"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
    >
      Text
    </p>
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Тестирвание компонента Circle Рендер компонента с текстом в head 1`] = `
<div
  class="content "
  data-testid="circle-wrapper"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head string"
  >
    Text
  </div>
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Тестирвание компонента Circle Рендер компонента с текстом в tail 1`] = `
<div
  class="content "
  data-testid="circle-wrapper"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    class="circle   default"
    data-testid="circle"
  >
    <p
      class="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 string"
  >
    Text
  </div>
</div>
`;
